--- a/sahayak-frontend/firebase.json
+++ b/sahayak-frontend/firebase.json
@@ -1,10 +1,19 @@
 {
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+  "hosting": [
+    {
+      "target": "sahayak-frontend",
+      "public": "sahayak-frontend/public",
+      "rewrites": [
+        {
+          "source": "**",
+          "app": "agile1"
+        }
+      ]
+    }
+  ],
+  "apphosting": {
+    "source": "sahayak-backend",
+    "project": "sahayak-agent-e66a0",
+    "location": "us-central1"
   }
 }
